--- a/splashscreen.html
+++ b/splashscreen.html
@@ -35,7 +35,7 @@
 <title>Splash</title>
 <body>
 <div data-role="page" data-theme="a" id="splashScreen" class="page-bg">
-    <div class="page-content splash-screen"> <img src="img/phone-book-logo.png" alt="Phone Book" /> </div>
+    <div class="page-content splash-screen"> <img src="img/testsplash.png" alt="Phone Book" /> </div>
   </div>
 
 </body>
